--- a/style.css
+++ b/style.css
@@ -101,3 +101,59 @@ nav div{
     margin: 20px 0;
     color: white;
 }
+
+.cards {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: -90px;  
+  position: relative;
+  z-index: 10;
+}
+
+.card {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  width: 250px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+  text-align: center;
+}
+
+.card:hover {
+  transform: translateY(-10px);
+  background-color: #FF6551;
+  color: white;
+  box-shadow: 0 12px 30px rgba(0,0,0,0.3);
+  transition: all 0.3s ease;
+}
+
+.card .icon {
+  font-size: 40px;
+  color: #FF6551;
+  margin-bottom: 10px;
+  background-color: aquamarine;
+  padding: 20px;
+  border-radius: 20px;
+}
+.card:hover .icon {
+  color: white;
+}
+
+.card .line {
+  width: 50px;
+  height: 3px;
+  background: #FF6551;
+  margin: 10px auto 15px;
+  border-radius: 2px;
+}
+
+.card h1{
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+.card p{
+    font-size: 14px;
+    color: #737373;
+    line-height: 1.5;
+}
