--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 
+.montserrat-normal {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
 /* Navbar style */
 header{
     background-image:
@@ -129,9 +134,9 @@ nav div{
 }
 
 .card .icon {
-  font-size: 40px;
+  font-size: 20px;
   color: #FF6551;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   background-color: aquamarine;
   padding: 20px;
   border-radius: 20px;
@@ -156,4 +161,97 @@ nav div{
     font-size: 14px;
     color: #737373;
     line-height: 1.5;
+}
+
+/* Learn section */
+
+.learn-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 20px;
+    gap: 50px;
+}
+
+.learn-img{
+    /* height: 240px; */
+    /* width: 276px; */
+    /* padding-left: -40px; */
+}
+
+.learn-about .line {
+  width: 50px;
+  height: 5px;
+  background: #FF6551;
+  /* margin: 10px auto 15px; */
+  border-radius: 2px;
+}
+.learn-about h1{
+    font-size: 40px;
+    margin: 20px 0;
+}
+.learn-about p{
+    font-size: 14px;
+    color: #737373;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+.learn-btn{
+    color: #FF6551;
+    font-size: 14px;
+    background: none;
+    border: none;
+    font: bold;
+}
+
+.video-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 20px;
+    gap: 50px;
+}
+
+.video img{
+    width: 513px;
+height: 363px;
+opacity: 1;
+}
+
+.video-section .line {
+  width: 50px;
+  height: 5px;
+  background: #FF6551;
+  /* margin: 10px auto 15px; */
+  border-radius: 2px;
+}
+
+.text-video h1{
+    font-size: 40px;
+    margin: 20px 0;
+}
+.text-video p{
+    font-size: 14px;
+    color: #737373;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+
+.Testimonials{
+    margin: 50px 110px;
+    
+}
+.Testimonials h1{
+    font-size: 40px;
+    
+}
+.Testimonials h4{
+    font-size: 14px;
+    color: #FF6551;
+}
+
+.Testimonials p{
+    font-size: 14px;
+    color: #737373;
+    
 }
